# esp32-toys

./: README.md
micropython/: README.md  boot.py  ssd1306.py  sx127x.py  upload.sh
rust/: Cargo.toml  README.md  setenv
rust/.cargo/: config
rust/src/: main.rs
tdeck/: .env  Cargo.toml  Justfile  README.md  export-esp-rust.sh  sdkconfig.defaults
tdeck/.cargo/: config.toml
tdeck/src/: main.rs
