[package]
name = "esp32-toys"
version = "0.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"

[dependencies]
xtensa-lx-rt = { version = "0.5.0", features = ["lx6"] }
xtensa-lx = { version = "0.3.0", features = ["lx6"] }
panic-halt = "0.2.0"
esp32-hal = "0.2.0"
ssd1306 = "0.5.0"
