[package]
name = "tdeck"
version = "0.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-hal = "0.43"
esp-idf-svc = "0.48"
esp-idf-sys = { version = "0.34", features = ["binstart"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-svc = "0.27"
mipidsi = "0.7.1"
anyhow = "1"
thiserror = "1"
colorgrad = "0.6.2"
# image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
embuild = "0.31.3"
